--- a/main.css
+++ b/main.css
@@ -31,6 +31,9 @@ ul li {
   width: 80%;
   border-radius: 3px;
   margin-top: 2em;
+  -webkit-box-shadow: 6px 10px 11px 3px rgba(199, 199, 199, 1);
+  -moz-box-shadow: 6px 10px 11px 3px rgba(199, 199, 199, 1);
+  box-shadow: 6px 10px 11px 3px rgba(199, 199, 199, 1);
 }
 
 #display-container {
