--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ ul li {
 }
 
 .def-text {
-  margin: 0.8em 7em;
+  margin: 0.8em 5em;
 }
 .images {
   width: 80%;
@@ -67,4 +67,13 @@ ul li {
 .subtitles {
   color: rgb(61, 61, 61);
   margin-bottom: 0.3rem;
+}
+
+@media only screen and (max-width: 875px) {
+  .def-text {
+    margin: 0.8em 1em;
+  }
+  .images {
+    width: 95%;
+  }
 }
